<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page"
    tools:context="com.example.steven.myapplication.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:background="@color/opaquewhite"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_light"
        android:text="@string/plants_of_ci"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:text="@string/interactive_map"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        android:onClick="interactiveMapButton"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:text="@string/plant_search"
        app:layout_constraintBottom_toTopOf="@+id/About"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:onClick="plantSearchButton"/>

    <ImageButton
        android:id="@+id/About"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-27dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="547dp" />

    <ImageView
        android:id="@+id/dolphin"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dolphin"
        app:layout_constraintBottom_toTopOf="@+id/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/dolphin" />

</android.support.constraint.ConstraintLayout>
